Fix spacing around yellow ribbon notification

--- a/src/sass/post-911-gib-status.scss
+++ b/src/sass/post-911-gib-status.scss
@@ -1,6 +1,8 @@
 @import "shared-variables";
 
 .gib-info {
+  margin-bottom: 5em;
+  
   h3 {
     border-bottom: 1px solid $color-gray-light;
     margin: 1em 0 .5em 0;
@@ -57,6 +59,10 @@
     h1 {
       margin-top: 1em;
     }
+  }
+
+  .yellow-ribbon-school {
+    margin-bottom: 0.75em;
   }
 
   .print-screen {
